--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,7 @@
     justify-content: space-between;
     list-style: none;
 }
+
 .top-menu li a{
     color: white;
 }
@@ -119,6 +120,10 @@
     height: 40vh;
 }
 
+.works-box a{
+    color: #000000;
+}
+
 #footer{
     margin-top: 10vh;
     height: 10vh;
@@ -129,4 +134,49 @@
     color: white;
     text-align: center;
     padding-top: 4vh;
+}
+
+@media screen and (max-width:480px){
+.container{
+    padding: 3vh;
+}
+
+.top-text {
+    width: 100%;
+    text-align: center;
+    font-size: 13px;
+}
+
+.top-menu{
+    width: 100%;
+}
+
+#top-img img{
+    height: 70vh;
+}
+
+.title{
+    width: 100%;
+}
+
+.about-images img{
+    width: 45vh;
+}
+
+.about-text{
+    width: 100%;
+    text-align: center;
+}
+
+.container{
+    flex-direction: column;
+}
+
+.skills-box{
+    width: 100%;
+}
+
+.works-box{
+    width: 100%;
+}
 }
