--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,6 +156,12 @@
 
 .title{
     width: 100%;
+    margin-bottom: 10vh;
+}
+
+#about {
+    padding: 0;
+    margin-top: 10vh;
 }
 
 .about-images img{
@@ -169,6 +175,10 @@
 
 .container{
     flex-direction: column;
+}
+
+#skills{
+    padding: 0;
 }
 
 .skills-box{
