--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 5vh;
+    align-items: center;
 }
 
 .top-text{
@@ -70,10 +71,11 @@
 
 .about-images img{
     width: 50vh;
+    height: auto;
 }
 
 .about-text{
-    width: 30%;
+    width: 35%;
     padding-top: 10vh;
 }
 
@@ -112,6 +114,9 @@
     width: 30%;
     text-align: center;
     margin-bottom: 5vh;
+    height: auto;
+    align-items: flex-start;
+
 }
 .works-box img{
     width: 100%;
